--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://freefem.github.io/FreeFem-examples-site" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
